Bug 1779227 - Enable the font attribute to be set on a disconnected <canvas> element without throwing an error. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D151627