dom/canvas/CanvasRenderingContext2D.cpp
@@ -18,6 +18,8 @@
 #include "mozilla/SVGImageContext.h"
 #include "mozilla/SVGObserverUtils.h"
 #include "mozilla/dom/Document.h"
+#include "mozilla/dom/FontFaceSetImpl.h"
+#include "mozilla/dom/FontFaceSet.h"
 #include "mozilla/dom/HTMLCanvasElement.h"
 #include "mozilla/dom/GeneratePlaceholderCanvasData.h"
 #include "nsPresContext.h"
@@ -3403,9 +3405,8 @@ void CanvasRenderingContext2D::SetFont(const nsACString& aFont,
 bool CanvasRenderingContext2D::SetFontInternal(const nsACString& aFont,
                                                ErrorResult& aError) {
   RefPtr<PresShell> presShell = GetPresShell();
-  if (NS_WARN_IF(!presShell)) {
-    aError.Throw(NS_ERROR_FAILURE);
-    return false;
+  if (!presShell) {
+    return SetFontInternalDisconnected(aFont, aError);
   }
 
   nsCString usedFont;
@@ -3453,6 +3454,109 @@ bool CanvasRenderingContext2D::SetFontInternal(const nsACString& aFont,
   CurrentState().fontLanguage = fontStyle->mLanguage;
   CurrentState().fontExplicitLanguage = fontStyle->mExplicitLanguage;
 
+  return true;
+}
+
+static nsAutoCString FamilyListToString(
+    const StyleFontFamilyList& aFamilyList) {
+  return StringJoin(","_ns, aFamilyList.list.AsSpan(),
+                    [](nsACString& dst, const StyleSingleFontFamily& name) {
+                      name.AppendToString(dst);
+                    });
+}
+
+static void SerializeFontForCanvas(const StyleFontFamilyList& aList,
+                                   const gfxFontStyle& aStyle,
+                                   nsACString& aUsedFont) {
+  // Re-serialize the font shorthand as required by the canvas spec.
+  aUsedFont.Truncate();
+
+  if (!aStyle.style.IsNormal()) {
+    aStyle.style.ToString(aUsedFont);
+    aUsedFont.Append(" ");
+  }
+
+  // font-weight is serialized as a number
+  if (!aStyle.weight.IsNormal()) {
+    aUsedFont.AppendFloat(aStyle.weight.ToFloat());
+  }
+
+  // font-stretch is serialized using CSS Fonts 3 keywords, not percentages.
+  if (!aStyle.stretch.IsNormal() &&
+      Servo_FontStretch_SerializeKeyword(&aStyle.stretch, &aUsedFont)) {
+    aUsedFont.Append(" ");
+  }
+
+  // Serialize the computed (not specified) size, and the family name(s).
+  aUsedFont.AppendFloat(aStyle.size);
+  aUsedFont.Append("px ");
+  aUsedFont.Append(FamilyListToString(aList));
+}
+
+bool CanvasRenderingContext2D::SetFontInternalDisconnected(
+    const nsACString& aFont, ErrorResult& aError) {
+  FontFaceSet* fontFaceSet = nullptr;
+  if (mCanvasElement) {
+    fontFaceSet = mCanvasElement->OwnerDoc()->Fonts();
+  } else {
+    nsIGlobalObject* global = GetParentObject();
+    fontFaceSet = global ? global->Fonts() : nullptr;
+  }
+
+  FontFaceSetImpl* fontFaceSetImpl =
+      fontFaceSet ? fontFaceSet->GetImpl() : nullptr;
+  RefPtr<URLExtraData> urlExtraData =
+      fontFaceSetImpl ? fontFaceSetImpl->GetURLExtraData() : nullptr;
+
+  if (fontFaceSetImpl) {
+    fontFaceSetImpl->FlushUserFontSet();
+  }
+
+  // In the OffscreenCanvas case we don't have the context necessary to call
+  // GetFontStyleForServo(), as we do in the main-thread canvas context, so
+  // instead we borrow ParseFontShorthandForMatching to parse the attribute.
+  StyleComputedFontStyleDescriptor style(
+      StyleComputedFontStyleDescriptor::Normal());
+  StyleFontFamilyList list;
+  gfxFontStyle fontStyle;
+  float size = 0.0f;
+  if (!ServoCSSParser::ParseFontShorthandForMatching(
+          aFont, urlExtraData, list, fontStyle.style, fontStyle.stretch,
+          fontStyle.weight, &size)) {
+    return false;
+  }
+
+  fontStyle.size = size;
+
+  // If we have a canvas element, get its lang (if known).
+  RefPtr<nsAtom> language;
+  bool explicitLanguage = false;
+  if (mCanvasElement) {
+    language = mCanvasElement->FragmentOrElement::GetLang();
+    if (language) {
+      explicitLanguage = true;
+    } else {
+      language = mCanvasElement->OwnerDoc()->GetLanguageForStyle();
+    }
+  }
+  // TODO: For workers, should we be passing a language? Where from?
+
+  // TODO: Cache fontGroups in the Worker (use an nsFontCache?)
+  gfxFontGroup* fontGroup = gfxPlatform::GetPlatform()->CreateFontGroup(
+      nullptr,           // aPresContext
+      list,              // aFontFamilyList
+      &fontStyle,        // aStyle
+      language,          // aLanguage
+      explicitLanguage,  // aExplicitLanguage
+      nullptr,           // aTextPerf
+      fontFaceSetImpl,   // aUserFontSet
+      1.0);              // aDevToCssSize
+  CurrentState().fontGroup = fontGroup;
+  SerializeFontForCanvas(list, fontStyle, CurrentState().font);
+  CurrentState().fontFont = nsFont(StyleFontFamily{list, false, false},
+                                   StyleCSSPixelLength::FromPixels(size));
+  CurrentState().fontLanguage = nullptr;
+  CurrentState().fontExplicitLanguage = false;
   return true;
 }
 
